Fix gas price button width if gas price amount too long

--- a/universal-login-react/src/ui/styles/gasPrice.sass
+++ b/universal-login-react/src/ui/styles/gasPrice.sass
@@ -40,16 +40,15 @@
   .gas-price-hint:hover .gas-price-tooltip
     display: block
 
-  .gas-price-dropdown
+.gas-price-dropdown
     position: relative
-    max-width: 270px
-    width: 270px
+    min-width: 270px
+    width: auto
     margin-top: 5px
 
   .gas-price-selected
     display: flex
     justify-content: space-between
-    height: 40px
     border: 1px solid
     border-radius: 2px
 
@@ -64,7 +63,6 @@
     height: 24px
 
   .gas-price-btn
-    height: 38px
     width: 34px
     background: url('./../assets/icons/3dots.svg') center no-repeat
     border: none
